<resources>
    <string name="app_name">yalkansoft</string>
    <string name="meal_name">饭菜名称</string>
    <string name="price">单价</string>
    <string name="number">数量</string>
    <string name="please_enter_the_number_of_meals">请输入用餐人数</string>
    <string name="input_password">请输入密码</string>
    <string name="not_order">您还没有点餐哦~</string>
    <string name="please_write_pay_money">请输入实付金额~</string>
    <string name="setting">程序设置</string>
    <string name="shop_name">店铺名称 : </string>
    <string name="remarks">备注 : %1$s</string>
    <string name="server_IP">服务器IP : </string>
    <string name="input_shop_name">请输入店铺名称</string>
    <string name="input_server_IP">请输入服务器IP</string>
    <string name="print_detail_menu">打印详细点菜单</string>
    <string name="Duplicate_Printing_of_Point_Menu">点菜单重复打印</string>
    <string name="Current_Language_Chinese">当前语言:中文</string>
    <string name="ordering_meals">开台点餐</string>
    <string name="bill_payment">买单结账</string>
    <string name="order_or_pay">%1$d号桌 - 顾客%2$d</string>
    <string name="total">合计:¥    %1$s</string>
    <string name="order_success">下单成功,总共%1$s个菜，合计:%2$s元</string>
    <string name="hall">大厅</string>
    <string name="yard">院子</string>
    <string name="balcony">包厢</string>
    <string name="back">返回</string>
    <string name="pay">结账</string>
    <string name="cash_payment">现金支付</string>
    <string name="weChat_payment">微信支付</string>
    <string name="alipay_payment">支付宝支付</string>
    <string name="actual_payment">实付 :</string>
    <string name="give_change">找零 :</string>
    <string name="confirm_the_order">确认下单</string>
    <string name="pay_success_message">%1$s的账单已结账成功！付款方式为%2$s，请确认是否到账</string>
    <string name="order_success_message">您给%1$s下的订单已发送成功！请确认打印机是否打印成功。</string>
    <string name="order_success_success">点餐成功!</string>
    <string name="pay_success_success">结账成功!</string>
    <string name="back_to_home">返回主界面</string>
    <string name="hot_dishes">热菜类</string>
    <string name="herbs">凉菜类</string>
    <string name="barbecued_meat">烤肉类</string>
    <string name="staple_food">主食类</string>
    <string name="beverages">饮料类</string>
    <string name="catching_meals">抓饭类</string>
    <string name="hot_pot">火锅类</string>
    <string name="change_language">切换语言</string>
    <string name="Current_Language_Uyghur">当前语言:维语</string>
    <string name="save">保存</string>
</resources>
