<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#333333"
        android:layout_gravity="center_vertical"
        android:text="@string/meal_name"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:textColor="#333333"
        android:text="@string/price"/>

    <TextView
        android:id="@+id/number"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:textColor="#333333"
        android:textSize="12sp"
        android:text="@string/number"/>
    <ImageView
        android:id="@+id/cutOrder"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:visibility="invisible"
        android:src="@drawable/btn_number_guests_minus"/>
    <ImageView
        android:id="@+id/addOrder"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:src="@drawable/btn_number_guests_plus"/>

</LinearLayout>