<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_window_all"
    android:paddingBottom="10dp"
    android:layout_gravity="center"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/bg_popup_window">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/setting"/>
        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:src="@drawable/shanchu"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:background="@drawable/bg_login_edit">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/shop_name"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="#D9E4F5"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:textColorHint="#6482AD"
            android:hint="@string/input_shop_name"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:padding="12dp"
        android:background="@drawable/bg_login_edit">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/server_IP"/>
        <EditText
            android:id="@+id/ipAddress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:background="#D9E4F5"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:textColorHint="#6482AD"
            android:hint="@string/input_server_IP"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/print_detail_menu"/>
        <ImageView
            android:id="@+id/printingSwitch"
            android:layout_width="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_kaiguan_kai"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/Duplicate_Printing_of_Point_Menu"/>
        <ImageView
            android:id="@+id/RepeatSwitch"
            android:layout_width="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_kaiguan_guan"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        >

        <TextView
            android:id="@+id/currentLanguage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:text="@string/Current_Language_Chinese"/>

        <TextView
            android:id="@+id/changeLanguage"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="切换语言"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/selector_bt_bg"
            android:layout_gravity="center"/>


    </LinearLayout>

    <TextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/bg_save"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_gravity="center"
        android:text="@string/save"/>
</LinearLayout>