<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#fff"
            android:layout_gravity="center_vertical"
            android:text="@string/meal_name"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:textColor="#fff"
            android:text="@string/price"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="#fff"
            android:textSize="12sp"
            android:text="@string/number"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0px"/>
        </android.support.v4.widget.SwipeRefreshLayout>
        <LinearLayout
            android:id="@+id/dishesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="changeHall"
            android:background="@drawable/buttom"
            android:gravity="right|center_vertical">

            <TextView
                android:id="@+id/dishes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/hot_dishes"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <ImageView
                android:id="@+id/hallImage"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/icon_top_cut"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/shopCart"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_margin="20dp"
        android:layout_gravity="bottom"
        android:src="@drawable/shopping_cart"/>

    <com.yalkansoft.widget.InterceptFrameLayout
        android:id="@+id/goneLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#55000000"/>
</FrameLayout>