<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#333333"
        android:layout_gravity="center_vertical"
        android:text="@string/meal_name"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:textSize="10sp"
        android:gravity="right"
        android:layout_gravity="center_vertical"
        android:textColor="#999999"
        android:text="@string/price"/>
        <ImageView
            android:id="@+id/cutOrder"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:src="@drawable/btn_minus"/>
    <TextView
        android:id="@+id/number"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:textColor="#333333"
        android:textSize="12sp"
        android:text="@string/number"/>

    <ImageView
        android:id="@+id/addOrder"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/btn_plus"/>

        <ImageView
            android:id="@+id/edit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:padding="2dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/btn_tag"/>

    </LinearLayout>

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="#dfdfdd"/>
    <TextView
        android:id="@+id/remarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:textColor="#666666"
        />
</LinearLayout>