<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rootView"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/allLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginRight="20dp"
        android:layout_gravity="center"
        android:elevation="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/bg_popup_window_all">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="#FF6565"/>
            <ImageView
                android:id="@+id/backDialogActivity"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:layout_gravity="right"
                android:src="@drawable/icon_shanchu"/>
        </FrameLayout>
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none"
            android:layerType="software"
            android:divider="@drawable/list_line_layer"
            android:dividerHeight="3dp"/>
            <TextView
                android:id="@+id/totalCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="#FF6565"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/pay_money"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/btn_mony"/>
            <ImageView
                android:id="@+id/pay_ali"
                android:layout_width="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_height="40dp"
                android:src="@drawable/btn_alipay"/>
            <ImageView
                android:id="@+id/pay_wechat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/btn_wechat"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_green_stroke"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#6EB43A"
                    android:text="@string/actual_payment"/>
                <EditText
                    android:id="@+id/payEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#6EB43A"
                    android:inputType="number"
                    android:gravity="center"
                    android:background="#fff"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_green_stroke"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#6EB43A"
                    android:text="@string/give_change"/>
                <TextView
                    android:id="@+id/giveEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:textColor="#6EB43A"
                    android:background="#fff"/>
            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:padding="10dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_red"
            android:textStyle="bold"
            android:text="@string/pay"
            android:layout_gravity="center"/>
    </LinearLayout>
</FrameLayout>